--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/toDoFragment2">
+    app:startDestination="@id/splashScreenFragment">
 
     <fragment
         android:id="@+id/toDoFragment2"
@@ -42,5 +42,14 @@
         <argument
             android:name="taskType"
             app:argType="string"/>
+    </fragment>
+    <fragment
+        android:id="@+id/splashScreenFragment"
+        android:name="com.example.todo.splash.SplashScreenFragment"
+        android:label="fragment_splash_screen"
+        tools:layout="@layout/fragment_splash_screen" >
+        <action
+            android:id="@+id/action_splashScreenFragment_to_toDoFragment2"
+            app:destination="@id/toDoFragment2" />
     </fragment>
 </navigation>
